# wikipedia-ime-dictionary

./: Cargo.toml  README.md
src/: main.rs
