[package]
name = "wikipedia-ime-dictionary"
version = "0.1.0"
authors = ["Jhon Smith(push_back) <jhonsmithworks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.15"
# flate2 = "1.0"
regex = "0.1"