[package]
name = "wikipedia-ime-dictionary"
version = "0.1.0"
authors = ["Jhon Smith(push_back) <jhonsmithworks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
guid-create = "0.1.1"
regex = "0.1"